[b]Version 0.8.0[/b]:

(2012-04-01)
 * Find subtitles window: display first the most used languages in the
   filter combobox. And add "pb" for Portuguese from Brasil.

(2012-03-31)
 * Fix the line breaks on downloaded *.sub files from opensubtitles.

(2012-03-29)
 * (Youtube) Recognize short urls.

(2012-03-28)
 * Display chapter names in the chapter menu.

(2012-03-19)
 * It's possible to change GUI without restarting.
 * Bug fix: remote m3u didn't open from the favorites menu or command line.

(2012-03-17)
 * Move the blur and sharpen filters to a group, so only one can be activated.
   It doesn't make much sense to be able to enable the blur and sharpen
   at the same time.
 * Move the denoise and blur/sharpen options to submenus.
 * Youtube quality by default is now mp4/720p.
 * The default width of the floating control is now 70%.
 * Toolbar editor: give a name to the widget actions (time slider and so on).

(2012-03-15)
 * Add gradfun to video -> filters.
 * Add blur and sharpen filters.

(2012-03-14)
 * Support for drag and drop in the toolbar editor.

(2012-03-13)
 * Toolbar editor. If you right click on any toolbar you'll get a menu
   with options to edit the toolbars (including the control bars).
   That will show a new dialog, with two list. On the left you'll see
   all available actions (mainly buttons, but also volume or seek sliders) 
   and on the right the current actions.
   The left and right buttons allow to move actions from one list to the
   other. The up and down buttons move the selected action in the current
   actions' list.
   The "add separator" button allows to add more separators.
   The "defaults" button removes all your changes in the current actions' 
   list and sets the default actions for the toolbar.

(2012-03-08)
 * Use QtSingleApplication instead of the old client/server code to use a 
   single instance and communication with other instances.
 * Possibility (smplayer.pro) to disable the build of some parts of the